Closed
Bug 1603409
Opened 6 years ago
Closed 6 years ago
error: definition of implicit copy constructor for '...' [-Werror,-Wdeprecated-copy]
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox73 fixed)
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: froydnj)
References
Details
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1602774 +++
We have more of bug 1602774
building with clang trunk
var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/Matrix.h:546:3: error: definition of implicit copy assignment operator for 'Matrix4x4Typed<mozilla::gfx::UnknownUnits, mozilla::gfx::UnknownUnits, float>' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy]
var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/ScaleFactor.h:33:13: error: definition of implicit copy assignment operator for 'ScaleFactor<mozilla::CSSPixel, mozilla::LayoutDevicePixel>' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy]
var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/ScaleFactors2D.h:31:13: error: definition of implicit copy assignment operator for 'ScaleFactors2D<mozilla::CSSPixel, mozilla::ParentLayerPixel>' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy]
var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/ScaleFactors2D.h:31:13: error: definition of implicit copy assignment operator for 'ScaleFactors2D<mozilla::LayoutDevicePixel, mozilla::LayerPixel>' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy]
var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/ScaleFactors2D.h:31:13: error: definition of implicit copy assignment operator for 'ScaleFactors2D<mozilla::ScreenPixel, mozilla::LayerPixel>' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy]
| Assignee | ||
Comment 1•6 years ago
|
||
These definitions are implicitly created now, but trunk clang considers
implicit creation to be a bug when you have explicitly declared copy
constructors.
Updated•6 years ago
|
Assignee: nobody → nfroyd
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/54a720d1b988
add missing operator= definitions for gfx/2d classes; r=botond
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•4 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•