Bug 1603409 - add missing operator= definitions for gfx/2d classes; r=botond

These definitions are implicitly created now, but trunk clang considers
implicit creation to be a bug when you have explicitly declared copy
constructors.

Differential Revision: https://phabricator.services.mozilla.com/D56970